# PEG_v2.0

./: PEGdb.sql  README.md
peg-backend/: CMakeLists.txt  README.md  README_EN.md  chat_server  chat_server.cpp  chat_server.h  peg_server.cpp  pupu  pupup  test  test1.cpp  新建文本文档 (7).txt
peg-backend/data/watdiv/: watdiv100InternalPoints.txt
peg-backend/dbUtil/: dbUtil.cpp  dbutil.h
peg-backend/gStoreAPI/: client.cpp  client.h
peg-backend/handler/: chat.cpp  chat.h  collection.cpp  collection.h  coment.cpp  comment.h  database.cpp  database.h  dbbackup.cpp  dbbackup.h  dblog.cpp  dblog.h  dbnode.cpp  dbnode.h  dbrestore.cpp  dbrestore.h  dbuser.cpp  dbuser.h  draft.cpp  draft.h  follower.cpp  follower.h  json.hpp  node.cpp  node.h  notice.cpp  notice.h  peglog.cpp  peglog.h  peguser.cpp  peguser.h  post.cpp  post.h  question.cpp  question.h  support.cpp  support.h  token.cpp  token.h  tool.cpp  (+5 more)
peg-backend/include/: crow.h
peg-backend/include/crow/: app.h  ci_map.h  common.h  http_connection.h  http_parser_merged.h  http_request.h  http_response.h  http_server.h  json.h  logging.h  middleware_context.h  mime_types.h  multipart.h  mustache.h  parser.h  query_string.h  routing.h  settings.h  socket_adaptors.h  task_timer.h  utility.h  websocket.h
peg-backend/joiner/: joiner.cpp  joiner.h
peg-backend/queryDecompose/: Makefile  README.md
peg-backend/queryDecompose/Parser/: QueryParser.cpp  SparqlLexer.c  SparqlLexer.h  SparqlParser.c  SparqlParser.h
peg-backend/script/: build.sh  khop  khop.sh  queryfile  setup.sh
peg-backend/sendcapt/: sendcaptcha.cpp  sendcaptcha.h
peg-backend/tojson/: tojson.cpp  tojson.h
peg-backend/util/: FileTransfer.cpp  FileTransfer.h  RemoteCmdInvoker.h  RemoteCmdlnvoker.cpp  RemoteInfo.cpp  RemoteInfo.h  util.h
peg-frontend/: babel.config.js  (+3 more)
(+125 files in other folders)
